switched to mongo db data storage
